# synthy

./: .gitignore  Cargo.toml  README.md
src/: assets.rs  imgui_wrapper.rs  keyboard.rs  main.rs  midi_interpreter.rs  song.rs
