[package]
name = "synthy"
version = "0.1.0"
authors = ["telastrus"]
edition = "2018"

[dependencies]
ggez = "0.5"

gfx_core = "0.9"
gfx_device_gl = "0.16"

imgui = "0.2"
imgui-gfx-renderer = "0.2"

resvg = { version = "0.8", features = ["raqote-backend"] }

midir = { git = "https://github.com/Boddlnagg/midir" }

arrayvec = "0.5"

midly = "0.3"

#chrono = "0.4"

synthrs = { git = "https://github.com/gyng/synthrs" }